--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.08);
       padding: 2rem;
-      overflow: hidden;
+      /* allow full height growth */
+      overflow: visible;
     }
     /* blended gradient + paint splash watermark */
     .invoice-container::before {
@@ -42,18 +43,15 @@
       opacity: 0.15;
       z-index: 0;
     }
-    /* keep content above watermark */
     .invoice-container > * {
       position: relative;
       z-index: 1;
     }
-    /* hide UI during PDF export */
     .invoice-container.hide-ui .actions,
     .invoice-container.hide-ui .add-btn {
       display: none !important;
     }
 
-    /* header */
     .invoice-header {
       display: flex;
       justify-content: space-between;
@@ -64,7 +62,7 @@
       align-items: center;
     }
     .logo {
-      height: 120px;    /* nice and crisp */
+      height: 120px;
       margin-right: 1rem;
     }
     .company-name {
@@ -73,7 +71,6 @@
       margin: 0;
     }
 
-    /* invoice meta box */
     .invoice-meta {
       background: var(--mid);
       color: #fff;
@@ -102,7 +99,6 @@
       font-weight: bold;
     }
 
-    /* recipient section */
     .recipient {
       margin-top: 2rem;
       text-transform: uppercase;
@@ -116,7 +112,6 @@
       padding: 0.3rem 0;
     }
 
-    /* services table */
     .section-title {
       margin-top: 2rem;
       color: var(--primary);
@@ -130,18 +125,17 @@
     }
     .items-table th {
       background: var(--light);
-      padding: 1rem;            /* extra padding */
+      padding: 1rem;
       font-weight: normal;
       text-align: left;
       line-height: 1.4;
     }
     .items-table td {
       border-bottom: 1px solid #eee;
-      padding: 1rem;            /* extra padding */
+      padding: 1rem;
       vertical-align: top;
       line-height: 1.4;
     }
-    /* prevent rows from splitting across pages */
     .items-table tr {
       page-break-inside: avoid;
       break-inside: avoid;
@@ -151,22 +145,25 @@
       width: 100%;
       border: 1px solid var(--mid);
       border-radius: 3px;
-      padding: 0.5rem;          /* a bit more space */
+      padding: 0.5rem;
       box-sizing: border-box;
       line-height: 1.3;
+      /* allow auto‑grow */
+      overflow: hidden;
+      resize: none;
     }
     .items-table textarea {
-      resize: vertical;
+      /* initial height */
+      height: auto;
     }
 
-    /* buttons */
     .add-btn,
     .actions button {
       background: var(--accent);
       color: #fff;
       border: none;
       border-radius: 4px;
-      padding: 0.6rem 1rem;      /* bumped up */
+      padding: 0.6rem 1rem;
       cursor: pointer;
       font-size: 0.95rem;
       margin-top: 0.5rem;
@@ -182,7 +179,6 @@
   </style>
 </head>
 <body>
-  <!-- html2pdf.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 
   <div id="invoiceCard" class="invoice-container">
@@ -243,15 +239,24 @@
     window.onload = () => {
       const card = document.getElementById('invoiceCard');
 
+      // auto‑grow a textarea to fit its content
+      function autoGrowTextarea(ta) {
+        ta.style.height = 'auto';
+        ta.style.height = ta.scrollHeight + 'px';
+      }
+
       // Add a new item row
       document.getElementById('addItem').onclick = () => {
         const tr = document.createElement('tr');
         tr.innerHTML = `
           <td><input type="text" placeholder="Service"></td>
-          <td><textarea rows="3" placeholder="Description"></textarea></td>
+          <td><textarea rows="1" placeholder="Description"></textarea></td>
           <td><input type="number" value="0"></td>
           <td><input type="number" value="0" step="0.01"></td>
           <td class="line-total">$0.00</td>`;
+        // hook up auto‑grow on input
+        const ta = tr.querySelector('textarea');
+        ta.addEventListener('input', () => autoGrowTextarea(ta));
         document.querySelector('#itemsTable tbody').appendChild(tr);
       };
 
@@ -268,13 +273,16 @@
         document.getElementById('invoiceTotal').textContent = '$' + sum.toFixed(2);
       };
 
-      // Download PDF with wider margins and higher resolution
+      // Download PDF
       document.getElementById('downloadBtn').onclick = () => {
+        // expand all descriptions fully before capture
+        document.querySelectorAll('.items-table textarea').forEach(autoGrowTextarea);
+
         card.classList.add('hide-ui');
         html2pdf()
           .from(card)
           .set({
-            margin:       [0.7, 0.7, 0.7, 0.7],  // 0.7" margins
+            margin:       [0.7, 0.7, 0.7, 0.7],
             filename:     'estimate.pdf',
             html2canvas:  { scale: 2 },
             jsPDF:        { unit: 'in', format: 'letter', orientation: 'portrait' }
