--- a/index.html
+++ b/index.html
@@ -25,41 +25,30 @@
       border-radius: 8px;
       box-shadow: 0 4px 12px rgba(0,0,0,0.08);
       padding: 2rem;
-      /* allow full height growth */
       overflow: visible;
     }
     /* blended gradient + paint splash watermark */
     .invoice-container::before {
       content: "";
-      position: absolute;
-      top: 0; right: 0; bottom: 0; left: 0;
+      position: absolute; top:0; right:0; bottom:0; left:0;
       background:
-        linear-gradient(
-          135deg,
-          rgba(255,153,204,0.1),
-          rgba(153,204,255,0.1)
-        ),
+        linear-gradient(135deg, rgba(255,153,204,0.1), rgba(153,204,255,0.1)),
         url("splashedpaint.jpg") center/cover no-repeat;
       opacity: 0.15;
       z-index: 0;
     }
-    .invoice-container > * {
-      position: relative;
-      z-index: 1;
-    }
+    .invoice-container > * { position: relative; z-index:1; }
     .invoice-container.hide-ui .actions,
     .invoice-container.hide-ui .add-btn {
       display: none !important;
     }
 
+    /* header */
     .invoice-header {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
+      display: flex; justify-content: space-between; align-items: center;
     }
     .company-left {
-      display: flex;
-      align-items: center;
+      display: flex; align-items: center;
     }
     .logo {
       height: 120px;
@@ -71,6 +60,7 @@
       margin: 0;
     }
 
+    /* meta & recipient */
     .invoice-meta {
       background: var(--mid);
       color: #fff;
@@ -80,105 +70,75 @@
       font-size: 0.9rem;
     }
     .meta-row {
-      display: flex;
-      justify-content: space-between;
+      display: flex; justify-content: space-between;
       margin-bottom: 0.5rem;
     }
     .meta-row input {
-      width: 80px;
-      border: none;
-      border-radius: 2px;
-      padding: 0.2rem;
+      width: 80px; border: none; border-radius:2px; padding:0.2rem;
     }
     .meta-total {
       background: var(--dark);
-      padding: 0.6rem;
-      border-radius: 3px;
-      display: flex;
-      justify-content: space-between;
-      font-weight: bold;
+      padding: 0.6rem; border-radius:3px;
+      display:flex;justify-content:space-between;font-weight:bold;
     }
-
     .recipient {
-      margin-top: 2rem;
-      text-transform: uppercase;
-      font-size: 0.9rem;
+      margin-top:2rem; text-transform:uppercase;font-size:0.9rem;
     }
     .recipient input {
-      width: 100%;
-      border: none;
-      border-bottom: 1px solid var(--mid);
-      margin-bottom: 0.5rem;
-      padding: 0.3rem 0;
+      width:100%; border:none;
+      border-bottom:1px solid var(--mid);
+      margin-bottom:0.5rem; padding:0.3rem 0;
     }
 
+    /* editable items table */
     .section-title {
-      margin-top: 2rem;
-      color: var(--primary);
-      font-size: 1.2rem;
-      border-bottom: 1px solid var(--mid);
+      margin-top:2rem;color:var(--primary);
+      font-size:1.2rem;border-bottom:1px solid var(--mid);
     }
     .items-table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 1rem;
+      width:100%;border-collapse:collapse;margin-top:1rem;
     }
     .items-table th {
-      background: var(--light);
-      padding: 1rem;
-      font-weight: normal;
-      text-align: left;
-      line-height: 1.4;
+      background:var(--light);padding:1rem;
+      font-weight:normal;text-align:left;line-height:1.4;
     }
     .items-table td {
-      border-bottom: 1px solid #eee;
-      padding: 1rem;
-      vertical-align: top;
-      line-height: 1.4;
+      border-bottom:1px solid #eee;padding:1rem;
+      vertical-align:top;line-height:1.4;
+      /* make cells editable */
+      background: transparent;
     }
+    /* turn cells into editable regions */
+    .items-table td.editable {
+      cursor: text;
+    }
+    /* placeholder text */
+    .items-table td.editable:empty:before {
+      content: attr(data-placeholder);
+      color: #aaa;
+    }
+    /* keep rows together */
     .items-table tr {
       page-break-inside: avoid;
       break-inside: avoid;
     }
-    .items-table input,
-    .items-table textarea {
-      width: 100%;
-      border: 1px solid var(--mid);
-      border-radius: 3px;
-      padding: 0.5rem;
-      box-sizing: border-box;
-      line-height: 1.3;
-      /* allow auto‑grow */
-      overflow: hidden;
-      resize: none;
-    }
-    .items-table textarea {
-      /* initial height */
-      height: auto;
-    }
 
-    .add-btn,
-    .actions button {
-      background: var(--accent);
-      color: #fff;
-      border: none;
-      border-radius: 4px;
-      padding: 0.6rem 1rem;
-      cursor: pointer;
-      font-size: 0.95rem;
-      margin-top: 0.5rem;
+    /* buttons */
+    .add-btn, .actions button {
+      background:var(--accent);color:#fff;border:none;
+      border-radius:4px;padding:0.6rem 1rem;
+      cursor:pointer;font-size:0.95rem;margin-top:0.5rem;
     }
-    .add-btn:hover,
-    .actions button:hover {
-      background: var(--dark);
+    .add-btn:hover, .actions button:hover {
+      background:var(--dark);
     }
     .actions {
-      margin-top: 2rem;
-      text-align: right;
+      margin-top:2rem;text-align:right;
     }
   </style>
 </head>
 <body>
+  <!-- html2pdf.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.min.js"></script>
 
   <div id="invoiceCard" class="invoice-container">
@@ -238,54 +198,54 @@
   <script>
     window.onload = () => {
       const card = document.getElementById('invoiceCard');
+      const tableBody = document.querySelector('#itemsTable tbody');
 
-      // auto‑grow a textarea to fit its content
-      function autoGrowTextarea(ta) {
-        ta.style.height = 'auto';
-        ta.style.height = ta.scrollHeight + 'px';
+      // helper to make a cell editable
+      function makeCell(placeholder) {
+        const td = document.createElement('td');
+        td.classList.add('editable');
+        td.setAttribute('contenteditable', 'true');
+        td.setAttribute('data-placeholder', placeholder);
+        return td;
       }
 
-      // Add a new item row
+      // add a new editable row
       document.getElementById('addItem').onclick = () => {
         const tr = document.createElement('tr');
-        tr.innerHTML = `
-          <td><input type="text" placeholder="Service"></td>
-          <td><textarea rows="1" placeholder="Description"></textarea></td>
-          <td><input type="number" value="0"></td>
-          <td><input type="number" value="0" step="0.01"></td>
-          <td class="line-total">$0.00</td>`;
-        // hook up auto‑grow on input
-        const ta = tr.querySelector('textarea');
-        ta.addEventListener('input', () => autoGrowTextarea(ta));
-        document.querySelector('#itemsTable tbody').appendChild(tr);
+        tr.appendChild(makeCell('Service'));
+        tr.appendChild(makeCell('Description'));
+        tr.appendChild(makeCell('0'));     // qty
+        tr.appendChild(makeCell('0.00'));  // unit price
+        const totalTd = document.createElement('td');
+        totalTd.className = 'line-total';
+        totalTd.textContent = '$0.00';
+        tr.appendChild(totalTd);
+        tableBody.appendChild(tr);
       };
 
-      // Compute totals
+      // compute totals by reading textContent
       document.getElementById('computeBtn').onclick = () => {
         let sum = 0;
-        document.querySelectorAll('#itemsTable tbody tr').forEach(tr => {
-          const qty   = parseFloat(tr.cells[2].querySelector('input').value) || 0;
-          const price = parseFloat(tr.cells[3].querySelector('input').value) || 0;
+        tableBody.querySelectorAll('tr').forEach(tr => {
+          const qty   = parseFloat(tr.children[2].textContent) || 0;
+          const price = parseFloat(tr.children[3].textContent) || 0;
           const line  = qty * price;
-          tr.querySelector('.line-total').textContent = '$' + line.toFixed(2);
+          tr.children[4].textContent = '$' + line.toFixed(2);
           sum += line;
         });
         document.getElementById('invoiceTotal').textContent = '$' + sum.toFixed(2);
       };
 
-      // Download PDF
+      // download PDF
       document.getElementById('downloadBtn').onclick = () => {
-        // expand all descriptions fully before capture
-        document.querySelectorAll('.items-table textarea').forEach(autoGrowTextarea);
-
         card.classList.add('hide-ui');
         html2pdf()
           .from(card)
           .set({
-            margin:       [0.7, 0.7, 0.7, 0.7],
-            filename:     'estimate.pdf',
-            html2canvas:  { scale: 2 },
-            jsPDF:        { unit: 'in', format: 'letter', orientation: 'portrait' }
+            margin:      [0.7,0.7,0.7,0.7],
+            filename:    'estimate.pdf',
+            html2canvas: { scale: 2 },
+            jsPDF:       { unit:'in', format:'letter', orientation:'portrait' }
           })
           .save()
           .finally(() => card.classList.remove('hide-ui'));
